--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Tinder for devs",
   "main": "index.js",
   "scripts": {
-    "start":"node src/app.js",
-    "dev":"nodemon src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "keywords": [
     "nodejs",
@@ -15,6 +15,7 @@
   "author": "Arpandev Bhattacharya",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.6.3"
   }
 }
